--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
     body
     {
         margin: 0;
-        padding: 0;
+        padding: 10px 20px;
         overflow: hidden;
         background-color: black;
     }
 </style>
+<p style="color: white; font-family: sans-serif; font-size: 14px; margin-bottom: 6px;"> 
+    <span>Score:</span> <span id="scoreEl">0</span>
+</p>
 <canvas></canvas>
 <script src="index.js"></script>
