--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<style>
-    body
-    {
-        margin: 0;
-        padding: 10px 20px;
-        overflow: hidden;
-        background-color: black;
-    }
-</style>
-<p style="color: white; font-family: sans-serif; font-size: 14px; margin-bottom: 6px;"> 
-    <span>Score:</span> <span id="scoreEl">0</span>
-</p>
-<canvas></canvas>
-<script src="index.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Canvas-packman</title>
+        <link href="index.css" rel="stylesheet">
+    </head>
+    <body>
+        <p style="color: white; font-family: sans-serif; font-size: 14px; margin-bottom: 6px;"> 
+            <span>Score:</span> <span id="scoreEl">0</span>
+        </p>
+        <canvas></canvas>
+        <script src="scripts/objects/boundary.js"></script>
+        <script src="scripts/objects/ghost.js"></script>
+        <script src="scripts/objects/pellet.js"></script>
+        <script src="scripts/objects/player.js"></script>
+        <script src="scripts/objects/powerup.js"></script>
+        <script src="scripts/index.js"></script>
+    </body>
+</html>
