Add ghost random texture

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <script src="scripts/objects/player.js"></script>
         <script src="scripts/objects/powerup.js"></script>
         <script src="scripts/objects/map.js"></script>
+        <script src="scripts/objects/texturer.js"></script>
 
         <script src="scripts/uimanager.js"></script>
+        <script src="scripts/textures.js"></script>
         <script src="scripts/gamemap.js"></script>
         
         <script src="scripts/index.js"></script>
