--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <script src="scripts/uimanager.js"></script>
         <script src="scripts/textures.js"></script>
         <script src="scripts/gamemap.js"></script>
+        <script src="scripts/gameconfig.js"></script>
         
         <script src="scripts/index.js"></script>
     </body>
