--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             <h2 class="hidden" id="gameOverContainer">
                 Game over! Scores: <span id="gameOverScores">0</span>
             </h1>
+            <h2>
+               Last record: <span id="highScoresText">0</span>
+            </h1>
             <button id="startGameBtn">Start</button>
         </div>
         <p class="scores-text hidden"> 
@@ -28,6 +31,7 @@
         <script src="scripts/textures.js"></script>
         <script src="scripts/gamemap.js"></script>
         <script src="scripts/gameconfig.js"></script>
+        <script src="scripts/progress-tracker.js"></script>
         
         <script src="scripts/index.js"></script>
     </body>
